2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-05-05  Andreas Kupries  <andreask@activestate.com>

	* prioqueue.tcl: Applied patch by author Michael Schlenker
	  <mic42@users.sourceforge.net>. Refactors internals for
	  speed. Passes the prioqueue testsuite.

2003-04-25  Andreas Kupries  <andreask@activestate.com>

	* queue.man: Documentation fix. peek/get throw errors if more was
	  requested than in the queue. The documentation talked about
	  returning empty strings. Thanks to Michael Schlenker
	  <mic42@users.sourceforge.net> for the report.

	* prioqueue.test: Extended to check for stable insertion.
	* prioqueue.tcl (__elementcompare): Bugfix, makes insertion stable.
	* prioqueue.man: New, documentation.

	* skiplist.man: Typo fix. Thanks to Michael Schlenker
	  <mic42@users.sourceforge.net> for the report.

2003-04-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.bench: New file, beginnings of a benchmark suite for the
	  data structure 'struct::tree'.

2003-04-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.man: Changed name to struct_tree.man. Was in conflict with
	  tree manpage of BLT.

2003-04-22  Andreas Kupries  <andreask@activestate.com>

	* graph.man: Switched cgraph reference to a purl supplied by the
	  cgraph author, and added wiki reference.

2003-04-16  Andreas Kupries  <andreask@activestate.com>

	* prioqueue.tcl (__elementcompare): Failures in testsuite fixed,
	  patch provided by original author, Michael Schlenker
	  <mic42@users.sourceforge.net>.

2003-04-15  Andreas Kupries  <andreask@activestate.com>

	* skiplist.man:
	* skiplist.tcl:
	* skiplist.test: New files. Patch #553980 submitted by Eric Melski
	  <ericm@users.sourceforge.net> on behalf of Keith Vetter.

	* prioqueue.tcl:
	* prioqueue.test: New files. Patch #607085 submitted by Michael
	  Schlenker <mic42@users.sourceforge.net>.
